# X_O-versions

./: CMakeLists.txt  main.cpp
include/: BoardGame_Classes.hpp  funcs.hpp
src/: GameManager.cpp  Player.cpp  RandomPlayer.cpp  RandomPlayer_game_1.cpp  RandomPlayer_game_2.cpp  RandomPlayer_game_3.cpp  X_O_App.cpp  X_O_Board.cpp  X_O_Board_game_1.cpp  X_O_Board_game_2.cpp  X_O_Board_game_3.cpp  funcs.cpp  game_1.cpp  game_2.cpp
